--- a/package.yaml
+++ b/package.yaml
@@ -37,5 +37,7 @@ tests:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -main-is Spec
     dependencies:
     - finding-success-and-failure
+    - hspec
