Fix 'unable to locate module' issue in VSCode
We need to add `test` into `source-dirs` so that the test classes are
picked up by VSCode.  The other changes address the collateral damage of
that.

--- a/package.yaml
+++ b/package.yaml
@@ -16,7 +16,11 @@ dependencies:
 - base >= 4.7 && < 5
 
 library:
-  source-dirs: src
+  source-dirs:
+  - src
+  - test            # This is required to avoid the 'unable to locate module' error from `haskell-ide-engine`
+  dependencies:
+  - hspec           # This is required to avoid the 'unable to locate module' error from `haskell-ide-engine`
 
 executables:
   finding-success-and-failure-exe:
