Increase all warnings to errors
And fix warning in `ExercisesSpec`.

--- a/package.yaml
+++ b/package.yaml
@@ -19,6 +19,9 @@ library:
   source-dirs:
   - src
   - test            # This is required to avoid the 'unable to locate module' error from `haskell-ide-engine`
+  ghc-options:
+  - -Wall
+  - -Werror
   dependencies:
   - hspec           # This is required to avoid the 'unable to locate module' error from `haskell-ide-engine`
   - QuickCheck
